# reddit-bot-bitorshite

./: README.md  bot.py  helpers.py  price.py  pyproject.toml
tests/: test_helpers.py  test_price.py
