[tool.poetry]
name = "pricetocrypto"
version = "0.1.0"
description = ""
authors = ["Alejandro <alejandro@admetricks.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipdb = "^0.13.4"
praw = "^7.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
